# aPrioriDNS

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  dev-requirements.txt  eva_readme.txt  pyproject.toml  pytest.ini
data/: LICENSE.md  README.md
data/Forced_HIT_ReL184/: info.json
data/Lifted_H2_subdomain_csp/: info.json
data/Premixed_H2_Phi0.5/: info.json
data/Premixed_H2_Phi0.5/chem_thermo_tran/: H2_9_42_0_SD.yaml
docs/: README.txt  requirements.txt
docs/source/: bibliography.rst  conf.py  contribute.rst  fundamentals_and_usage.rst  getting_started.rst  how_to_cite.rst  index.rst  installation.rst  license.rst  publications.rst  quickstart.rst  references.bib  welcome.rst  what_is_apriori.rst
docs/source/_static/: custom.css
paper_examples/: 00-filtering.py  01-pointer_efficiency.py  02-DNS_grid_size_year_plot.py  03-DNS_CO2_plot.py  04-DNS_grid_size_and_CO2.py  05-filter_and_cut.py  06-Smagorinsky.py  07-ML_turbulent_combustion_closure.py
paper_examples/material/: DNS_size_table.csv  table2-2.png.xlsx
src/aPriori/: DNS.py  NN.py  __init__.py  _gradients_numpy.py  _styles.py  _utils.py  _variables.py  derivatives.py  plot_utilities.py
src/aPrioriDNS/: DNS.py  NN.py  __init__.py  _data_struct.py  _styles.py  _utils.py  _variables.py  plot_utilities.py
tests/: conftest.py  test_h2_nonprem_pipeline.py
tutorials/: 01-cut_a_scalar.py  02-filter_scalar.py  02_simple_plotting.ipynb  03-initialize_DNS_field.py  04-data_visualization.py  05-cut_DNS_field.py  06-filter_DNS_field.py  ML_closure_reaction_rates.py  Quickstart.py
(+130 files in other folders)
