[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aPrioriDNS"
version = "1.2.1"
authors = [
  { name="Lorenzo Piu", email="lorenzo.piu@ulb.be" },
]
license-files = [
  "LICENSE",
  "third_party/PyCSP/LICENSE"
]
description = "A python package to process Direct Numerical Simulations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.12.0",
    "matplotlib>=3.2.0",
	 "cantera>=3.0.0",
    "tabulate>=0.9.0",
    "requests>=2.32.0",
	 "PyCSP-lib>=1.4.0",
   "findiff>=0.12",
    # Add more dependencies here
]

[tool.hatch.build]
exclude = [
  "data",
  "docs",
]

[project.urls]
Homepage = "https://github.com/LorenzoPiu/aPriori"
Issues = "https://github.com/LorenzoPiu/aPriori/issues"
Documentation = "https://apriori.gitbook.io"

[tool.hatch.build.targets.wheel]
packages = ["src/aPriori"]
